--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,9 @@ TensorCast = "02d47bb6-7ce6-556a-be16-bb1710789e2b"
 
 [compat]
 julia = "1.3"
+Flux = "0.10"
+Requires = "1.0"
+TensorCast = "0.2"
 
 [extras]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
